# 1602LCD

./: .gitignore  Cargo.toml  memory.x  rust-toolchain.toml
.cargo/: config.toml
build_script/: Cargo.toml
build_script/src/: build.rs
src/: main.rs
