[package]
name = "lcd1602"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m-rt = "0.7.3"
cortex-m = "=0.7.7"
embassy-executor = { version = "0.5.0", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "integrated-timers"] }
embassy-time = { version = "0.3.0" }
embassy-rp = { version = "0.1.0", features = ["time-driver", "critical-section-impl"] }
embassy-usb-logger = "0.1.0"
defmt = "0.3"
log = "0.4"
ag-lcd = { version = "0.2.0", features = ["i2c"] }
port-expander = "0.3.0"
panic-halt = "0.2.0"
